fixed green fainted background cutoff issue

--- a/popup.css
+++ b/popup.css
@@ -71,7 +71,7 @@ body {
 body::before {
     content: " ";
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
